[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
position = Vector2( 430.539, 55.4991 )
script = ExtResource( 1 )

[node name="Players" type="Panel" parent="."]
visible = false
margin_left = 61.8574
margin_top = 65.8523
margin_right = 342.857
margin_bottom = 516.852
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -190.5
margin_right = 117.5
margin_bottom = 171.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.5
margin_top = 16.0
margin_right = 65.5
margin_bottom = 30.0
text = "Waiting for players..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = -44.0
margin_right = 38.5
margin_bottom = -16.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.1785
margin_top = 213.132
margin_right = 330.179
margin_bottom = 335.132
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 52.2432
margin_top = 26.0
margin_right = 196.243
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 88.1625
margin_top = 76.3784
margin_right = 158.163
margin_bottom = 102.378
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 3.56763
margin_top = 127.245
margin_right = 249.568
margin_bottom = 152.245
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
